@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 version = '1.0-prototype'
@@ -18,17 +17,37 @@ repositories {
     mavenCentral()
 }
 
-javafx {
-    version = '21.0.2'
-    modules = ['javafx.controls']
+def javafxVersion = '21.0.2'
+
+dependencies {
+    implementation "org.openjfx:javafx-base:${javafxVersion}:win"
+    implementation "org.openjfx:javafx-controls:${javafxVersion}:win"
+    implementation "org.openjfx:javafx-graphics:${javafxVersion}:win"
+    implementation "org.openjfx:javafx-fxml:${javafxVersion}:win"
+    
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
 }
 
 application {
     mainClass = 'com.floydwarshall.App'
 }
 
+run {
+    mainClass = 'com.floydwarshall.App'
+    jvmArgs = [
+        '--module-path', configurations.runtimeClasspath.asPath,
+        '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
+test {
+    useJUnitPlatform()
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.floydwarshall.App'
     }
+
 }
